--- a/antora.yml
+++ b/antora.yml
@@ -108,6 +108,7 @@ asciidoc:
     rh-os-devspaces: Red Hat OpenShift Dev Spaces
     rh-os-local: Red Hat OpenShift Local
     theia-endpoint-image: eclipse/che-theia-endpoint-runtime:next
+    editor-definition-samples-link: link:https://github.com/eclipse-che/che-operator/tree/main/editors-definitions[Editors definitions samples]
 ext:
   collector:
   - run:
