--- a/antora-assembler.yml
+++ b/antora-assembler.yml
@@ -14,5 +14,5 @@ root_level: 1
 component_versions: '*'
 section_merge_strategy: fuse
 build:
-    command: asciidoctor --attribute toclevels=5 --attribute antora-assembler=true --trace
+    command: asciidoctor-pdf --attribute toclevels=5 --attribute antora-assembler=true --trace --sourcemap
     keep_aggregate_source: true
