--- a/devfile.yaml
+++ b/devfile.yaml
@@ -42,3 +42,11 @@ commands:
         kind: build
       workingDir: "${PROJECT_SOURCE}"
     id: start-preview-server
+  - exec:
+      commandLine: vale sync
+      component: tools
+      group:
+        isDefault: false
+        kind: build
+      workingDir: "${PROJECT_SOURCE}"
+    id: vale-sync
