--- a/antora.yml
+++ b/antora.yml
@@ -1,8 +1,8 @@
 ---
 name: docs
 title: Documentation
-version: next
-prerelease: true
+version: 7.91.x
+prerelease: false
 start_page: overview:introduction-to-eclipse-che.adoc
 nav:
   - modules/overview/nav.adoc
@@ -98,8 +98,8 @@ asciidoc:
     prod-upstream: Eclipse&#160;Che
     prod-url: "https://__&lt;che_fqdn&gt;__"
     prod-ver-major: "7"
-    prod-ver-patch: "7.90.0"
-    prod-ver: "7.90"
+    prod-ver-patch: "7.91.0"
+    prod-ver: "7.91"
     prod-workspace: che-ws
     prod: Eclipse&#160;Che
     prod2: Eclipse&#160;Che
