--- a/antora.yml
+++ b/antora.yml
@@ -87,6 +87,7 @@ asciidoc:
     prod-operator-index: registry.access.redhat.com/redhat/community-operator-index:v{ocp4-ver}
     prod-operator-package-name: eclipse-che
     prod-operator: che-operator
+    prod-operator-subscription: eclipse-che
     prod-prev-short: Che
     prod-prev-id-short: che
     prod-prev-ver: "previous minor version"
@@ -109,6 +110,7 @@ asciidoc:
     rh-os-local: Red Hat OpenShift Local
     theia-endpoint-image: eclipse/che-theia-endpoint-runtime:next
     editor-definition-samples-link: link:https://github.com/eclipse-che/che-operator/tree/main/editors-definitions[Editors definitions samples]
+    devfile-api-version: 2.3.0
 ext:
   collector:
   - run:
