--- a/antora.yml
+++ b/antora.yml
@@ -1,8 +1,8 @@
 ---
 name: docs
 title: Documentation
-version: next
-prerelease: true
+version: 7.92.x
+prerelease: false
 start_page: overview:introduction-to-eclipse-che.adoc
 nav:
   - modules/overview/nav.adoc
@@ -25,7 +25,7 @@ asciidoc:
     # for the project
     che-plugin-registry-directory: che-plugin-registry
     devworkspace-operator-index-disconnected-install: quay.io/devfile/devworkspace-operator-index:release-digest
-    devworkspace-operator-version-patch: "0.30.0"
+    devworkspace-operator-version-patch: "0.31.0"
     devworkspace: DevWorkspace
     devworkspace-id: devworkspace
     docker-cli: docker
@@ -99,8 +99,8 @@ asciidoc:
     prod-upstream: Eclipse&#160;Che
     prod-url: "https://__&lt;che_fqdn&gt;__"
     prod-ver-major: "7"
-    prod-ver-patch: "7.91.0"
-    prod-ver: "7.91"
+    prod-ver-patch: "7.92.0"
+    prod-ver: "7.92"
     prod-workspace: che-ws
     prod: Eclipse&#160;Che
     prod2: Eclipse&#160;Che
