--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,10 @@ jobs:
               echo "[ERROR] Cannot proceed with release - tag already exists"
             fi
           fi
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
       - name: Set up yq
         run: |
           python -m pip install --upgrade pip
