--- a/.github/workflows/vale.yml
+++ b/.github/workflows/vale.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Install Asciidoctor
+        run: sudo apt-get install -y asciidoctor
       - name: Vale Linter
         uses: errata-ai/vale-action@reviewdog
         with:
