feat: publication-builder job will also trigger che-website-publish job
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/.github/workflows/publication-builder.yaml
+++ b/.github/workflows/publication-builder.yaml
@@ -65,3 +65,9 @@ jobs:
           github_token: ${{ secrets.CHE_BOT_GITHUB_TOKEN }}
           publish_branch: publication
           publish_dir: build/site
+  call-che-website-publish:
+    name: "Call website publication update"
+    needs: build
+    uses: eclipse-che/che-website-publish/blob/main/.github/workflows/publish.yaml
+    secrets:
+      CHE_BOT_GITHUB_TOKEN: ${{ secrets.CHE_BOT_GITHUB_TOKEN }}
