fixup! chore: temporarily ignore errors from htmltest

--- a/.htmltest.yml
+++ b/.htmltest.yml
@@ -16,6 +16,7 @@ DirectoryPath: build/site # Not build/site to avoid false positives on 404.html
 OutputDir: .cache/htmltest
 CacheExpires: "12h" # Default is 2 weeks.
 ExternalTimeout: 60 # (seconds) default is 15.
+IgnoreExternalBrokenLinks: true
 IgnoreURLs:
   - https://cse.google.com/cse.js
   - https://marketplace.visualstudio.com
